[package]
name = "jupiter-swap-api-client"
version = "0.1.0"
description = ""
edition =  "2021" 

[dependencies]
anyhow = "1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
solana-sdk = "1.14.23"
base64 = "0.21.5"
serde_qs = "0.12.0"
reqwest = { version = "0.11.20", features = ["json"] }
